; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ec/extr_ecp_nistp521.c_bin66_to_felem.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ec/extr_ecp_nistp521.c_bin66_to_felem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bottom58bits = common dso_local global i32 0, align 4
@bottom57bits = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @bin66_to_felem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bin66_to_felem(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @bottom58bits, align 4
  %9 = and i32 %7, %8
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  store i32 %9, i32* %11, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 7
  %14 = load i32, i32* %13, align 4
  %15 = ashr i32 %14, 2
  %16 = load i32, i32* @bottom58bits, align 4
  %17 = and i32 %15, %16
  %18 = load i32*, i32** %3, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 1
  store i32 %17, i32* %19, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 14
  %22 = load i32, i32* %21, align 4
  %23 = ashr i32 %22, 4
  %24 = load i32, i32* @bottom58bits, align 4
  %25 = and i32 %23, %24
  %26 = load i32*, i32** %3, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 2
  store i32 %25, i32* %27, align 4
  %28 = load i32*, i32** %4, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 21
  %30 = load i32, i32* %29, align 4
  %31 = ashr i32 %30, 6
  %32 = load i32, i32* @bottom58bits, align 4
  %33 = and i32 %31, %32
  %34 = load i32*, i32** %3, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 3
  store i32 %33, i32* %35, align 4
  %36 = load i32*, i32** %4, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 29
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* @bottom58bits, align 4
  %40 = and i32 %38, %39
  %41 = load i32*, i32** %3, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 4
  store i32 %40, i32* %42, align 4
  %43 = load i32*, i32** %4, align 8
  %44 = getelementptr inbounds i32, i32* %43, i64 36
  %45 = load i32, i32* %44, align 4
  %46 = ashr i32 %45, 2
  %47 = load i32, i32* @bottom58bits, align 4
  %48 = and i32 %46, %47
  %49 = load i32*, i32** %3, align 8
  %50 = getelementptr inbounds i32, i32* %49, i64 5
  store i32 %48, i32* %50, align 4
  %51 = load i32*, i32** %4, align 8
  %52 = getelementptr inbounds i32, i32* %51, i64 43
  %53 = load i32, i32* %52, align 4
  %54 = ashr i32 %53, 4
  %55 = load i32, i32* @bottom58bits, align 4
  %56 = and i32 %54, %55
  %57 = load i32*, i32** %3, align 8
  %58 = getelementptr inbounds i32, i32* %57, i64 6
  store i32 %56, i32* %58, align 4
  %59 = load i32*, i32** %4, align 8
  %60 = getelementptr inbounds i32, i32* %59, i64 50
  %61 = load i32, i32* %60, align 4
  %62 = ashr i32 %61, 6
  %63 = load i32, i32* @bottom58bits, align 4
  %64 = and i32 %62, %63
  %65 = load i32*, i32** %3, align 8
  %66 = getelementptr inbounds i32, i32* %65, i64 7
  store i32 %64, i32* %66, align 4
  %67 = load i32*, i32** %4, align 8
  %68 = getelementptr inbounds i32, i32* %67, i64 58
  %69 = load i32, i32* %68, align 4
  %70 = load i32, i32* @bottom57bits, align 4
  %71 = and i32 %69, %70
  %72 = load i32*, i32** %3, align 8
  %73 = getelementptr inbounds i32, i32* %72, i64 8
  store i32 %71, i32* %73, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
